...
                traceLabel = "Continue all kanji",
                onClick = onContinueAll
            )
        }
        StudySecondaryButton(
            label = StudyTextCopy.backHomeLabel(),
            traceLabel = "Back home",
            onClick = onBackHome
        )
    }
}

@Composable
...
